--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mongoose": "^6.8.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
